fixed margin on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -289,7 +289,7 @@ body {
             .color-palette {
                 width: 100%;
                 height: 100%;
-                margin: 0 auto;
+                margin: 0 auto 1em;
             }
 
             .color-one, .color-two, .color-three, .color-four, .color-five {
@@ -477,6 +477,7 @@ body {
             .preview-window {
                 width: 100%;
                 height: 100%;
+                margin: 1em 0;
             }
         } 
     
